Move to seurat 4 (#29)
* Expose perplexity

* Avoids completely deprecated dim.1 and dim.2 in dim-plot

* Dimplot removes or ammend var changes.

* Revert "Tidy up tSNE tests"

This reverts commit 18949ca9f49d2855f5691a82436c7baeb111c499.

* Revert "Expose perplexity"

This reverts commit fe25f04479d777e1442dc37c3cebd0d8770400f2.

* Use seurat 3.1.5 in test env

* Missing argument for perplexity

* Fixes tests

* Adds integration

* Data for transfer test

* Split object WIP

* Set Seurat to 4.0.0

* Missing comma

* Temporary export to cell browser.

* Split objects and tests

* Try with unmerged workflowscripts common

* Seuratdisk conda typo

* Fix split-object test

* Classify against reference

* Advance towards testing of integration and classification against reference.

* Fixes integration call (issue with params)

* Fix params issues in classify call

* Avoid quota for installing from github

* Fixes SCT, dims and anchorset output issues on classify

* Fix classify call

* UMAP integrated plus scale/PCA integrated tests

* Minor UMAP changes

* MapQuery passing tests

* Automatic mods to UMAP and message for script provenance

* Seurat convert + tests

* h5Seurat support in convert and tests

* Move to Seurat 3.2.3

* Fix unfeasible boundary

* Missing comma

* Seurat 3 convert

* Seurat convert tests

* Depend on workflowscriptscommon repo until we have a release there.

* Missing remotes for tests

* Missing github PAT

* Fix loom file naming inconsistency

* Update default parameter values Seurat 3 (#30)

* Update default parameter values

* Fix parameter flags in test scripts

* Turn new default true to negation flags

Co-authored-by: Pablo Moreno <pablo.a.moreno@gmail.com>

* Remove old flags in fvg and use manual seurat-convert script.

* Convert YAML

* Reinstate extract transfer removed in merge

* Clean bats from seurat3 changes

* Fixes different 

--- a/cli-generated/manually_crafted_YAML/seurat-convert.yaml
+++ b/cli-generated/manually_crafted_YAML/seurat-convert.yaml
@@ -1,10 +1,10 @@
 commands:
-  - call: 'read_seurat3_object'
+  - call: 'read_seurat4_object'
     dependencies:
       - workflowscriptscommon
       - optparse
       - scater
-      - loomR
+      - SeuratDisk
       - Seurat
     options:
       - long: input-object-file
@@ -21,7 +21,7 @@ commands:
         help: 'Either loom, seurat, h5seurat, anndata or singlecellexperiment for the input format to read.'
     output:
       - var_name: seurat_object
-  - call: 'write_seurat3_object'
+  - call: 'write_seurat4_object'
     parsing_opts:
       - r_sep: "_"
     options_aliases:
