--- a/test-environment.yml
+++ b/test-environment.yml
@@ -4,13 +4,14 @@ dependencies:
   - r-optparse
   - libpng
   - r-cairo
-  - r-seurat =3.2.3
-  - r-base >=4.0.0,<4.1
-  - r-matrix <=1.3_2
-  - r-spatstat <=1.64_1
-  - r-spatstat.data <=1.64_1
-  - r-spatstat.utils <=1.64_1
   - r-workflowscriptscommon >=0.0.8
+  - r-seurat=4.0.0
+  - r-uwot <0.1.11
   - r-loom
+  - r-svglite
   - bioconductor-scater
+  - r-seuratdisk
   - r-remotes
+  - bioconductor-multtest
+  - r-metap
+  - pandoc
