--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -20,32 +20,19 @@ jobs:
         run: |
           echo "${GITHUB_WORKSPACE}" >> $GITHUB_PATH
 
-      - name: Cache conda
-        uses: actions/cache@v1
-        env:
-          # Increase this value to reset cache if etc/example-environment.yml has not changed
-          CACHE_NUMBER: 0
+      - uses: mamba-org/setup-micromamba@v1
         with:
-          path: ~/conda_pkgs_dir
-          key:
-            ${{ matrix.os }}-conda-${{ env.CACHE_NUMBER }}-${{hashFiles('test-environment.yml') }}
-
-      - uses: conda-incubator/setup-miniconda@v2
-        with:
-          activate-environment: test
+          micromamba-version: '1.3.1-0'
           environment-file: test-environment.yml
-          mamba-version: "*"
-          miniforge-variant: Mambaforge
-          use-mamba: true
-          miniforge-version: latest
-          python-version: 3.6
-          channels: conda-forge,bioconda,defaults
-          allow-softlinks: true
-          channel-priority: flexible
-          show-channel-urls: true
-          use-only-tar-bz2: true
+          init-shell: >-
+            bash
+          cache-environment: true
+          create-args: |
+            python=${{ matrix.python-version }}
+          post-cleanup: 'all'
 
       - name: Run tests
+        shell: bash -el {0}
         env:
           GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
