--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -22,7 +22,7 @@ jobs:
 
       - uses: mamba-org/setup-micromamba@v1
         with:
-          micromamba-version: '1.4.4'
+          micromamba-version: '1.4.5-0'
           environment-file: test-environment.yml
           init-shell: >-
             bash
